--- a/formValidation/index.html
+++ b/formValidation/index.html
@@ -4,38 +4,50 @@
     <meta charset="UTF-8">
     <title></title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<form class="form-horizontal">
+
+
+<form class="form-horizontal" name="billing" onsubmit="return validateForm()">
     <fieldset>
 
         <!-- Form Name -->
         <legend>Order Form</legend>
 
+        <h4>Billing Info</h4>
+
         <!-- Text input-->
         <div class="control-group">
             <label class="control-label" for="name">Name</label>
+
             <div class="controls">
-                <input id="name" name="name" type="text" placeholder="enter name" class="input-medium" required="">
+                <input id="name" name="name" type="text" placeholder="enter name" class="input-medium"
+                       required="">
 
             </div>
         </div>
 
         <!-- Text input-->
         <div class="control-group">
-            <label class="control-label" for="Address">Address</label>
+            <label class="control-label" for="address">Address</label>
+
             <div class="controls">
-                <input id="Address" name="Address" type="text" placeholder="enter address" class="input-medium" required="">
+                <input id="Address" name="address" type="text" placeholder="enter address" class="input-medium"
+                       required>
 
             </div>
         </div>
 
-        <!-- Password input-->
+        <!-- Email input-->
         <div class="control-group">
             <label class="control-label" for="email">E-mail</label>
+
             <div class="controls">
-                <input id="email" name="email" type="password" placeholder="enter e-mail address" class="input-medium" required="">
+                <input id="email" name="email" type="text" placeholder="enter e-mail address"
+                       class="input-medium"
+                       required>
 
             </div>
         </div>
@@ -43,8 +55,10 @@
         <!-- Text input-->
         <div class="control-group">
             <label class="control-label" for="phone">Phone Number</label>
+
             <div class="controls">
-                <input id="phone" name="phone" type="text" placeholder="enter phone number" class="input-medium" required="">
+                <input id="phone" name="phone" type="text" placeholder="enter phone number" class="input-medium"
+                       required>
 
             </div>
         </div>
@@ -52,18 +66,31 @@
         <!-- Password input-->
         <div class="control-group">
             <label class="control-label" for="password">Password</label>
+
             <div class="controls">
-                <input id="password" name="password" type="password" placeholder="enter password" class="input-medium" required="">
+                <input id="password" name="password" type="password" placeholder="enter password"
+                       class="input-medium"
+                       required>
 
             </div>
         </div>
-
-        <!-- Multiple Checkboxes -->
+        <!-- Password input-->
         <div class="control-group">
-            <label class="control-label" for="checkbox">Please Choose</label>
+            <label class="control-label" for="password">Re-enter Password</label>
+
             <div class="controls">
-                <label class="checkbox" for="checkbox-0">
-                    <input type="checkbox" name="checkbox" id="checkbox-0" value="Billing same as Shipping?">
+                <input id="password2" name="password2" type="password" placeholder="re-enter password"
+                       class="input-medium"
+                       required>
+
+            </div>
+        </div>
+        <!-- Checkbox -->
+        <div class="control-group">
+
+            <div class="controls">
+                <label class="checkbox" for="checkbox">
+                    <input type="checkbox" name="checkbox" id="check" value="Billing same as Shipping?">
                     Billing same as Shipping?
                 </label>
             </div>
@@ -72,12 +99,63 @@
         <!-- Button -->
         <div class="control-group">
             <label class="control-label" for="button-submit"></label>
+
             <div class="controls">
                 <button id="button-submit" name="button-submit" class="btn btn-primary">Submit</button>
             </div>
         </div>
 
+        <h4>Shipping Info</h4>
+
+        <!-- Text input-->
+        <div class="control-group">
+            <label class="control-label" for="name">Name</label>
+
+            <div class="controls">
+                <input id="name" name="shipname" type="text" placeholder="enter name" class="input-medium"
+                       required="">
+
+            </div>
+        </div>
+
+        <!-- Text input-->
+        <div class="control-group">
+            <label class="control-label" for="address">Address</label>
+
+            <div class="controls">
+                <input id="Address" name="shipaddress" type="text" placeholder="enter address" class="input-medium"
+                       required>
+
+            </div>
+        </div>
+
+        <!-- Email input-->
+        <div class="control-group">
+            <label class="control-label" for="email">E-mail</label>
+
+            <div class="controls">
+                <input id="email" name="shipemail" type="text" placeholder="enter e-mail address"
+                       class="input-medium"
+                       required>
+
+            </div>
+        </div>
+
+        <!-- Text input-->
+        <div class="control-group">
+            <label class="control-label" for="phone">Phone Number</label>
+
+            <div class="controls">
+                <input id="phone" name="shipphone" type="text" placeholder="enter phone number" class="input-medium"
+                       required>
+
+            </div>
+        </div>
+
     </fieldset>
 </form>
+</div>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+<script src="validateForm.js"></script>
 </body>
 </html>
